메인페이지 슬라이드 적용

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -281,7 +281,7 @@
         <br>
         <hr class="w-95">
         <div class="text-white font-bold text-3xl pt-5">Book U Luv</div>
-        <div class="text-white font-bold text-2xl pt-5">책 구매를 하여 책을 읽어 봅시다!</div>
+        <div class="text-white font-bold text-2xl pt-5">요즘 여러분은 뭘 읽으세요?</div>
     </div>
 </footer>
 
