메인페이지 슬라이드 576px 이하에서는 slcik dots 숨김

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -152,6 +152,7 @@ $(document).ready(function () {
                     settings: {
                         slidesToShow: 1,
                         slidesToScroll: 1,
+                        dots: false // 너비 576px 이하에서는 slick dots 숨김
                     }
                 }
             ]
@@ -186,6 +187,7 @@ $(document).ready(function () {
                     settings: {
                         slidesToShow: 1,
                         slidesToScroll: 1,
+                        dots: false // 너비 576px 이하에서는 slick dots 숨김
                     }
                 }
             ]
