디테일페이지 너비조정 및 정가 할인가 조건에 따라 표시, 메인페이지 할인율 표시조정

--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -49,12 +49,12 @@
     </div>
 
 
-    <div class="my-2 sm:my-3 w-[700px]">
+    <div class="mb-2 sm:mb-2 w-[700px]">
         <span>작가 : </span>
         <span th:text="${product.author}" class="overflow-auto break-words"></span>
     </div>
 
-    <div class="my-2 sm:my-3 w-[700px]">
+    <div class="mb-2 sm:mb-2 w-[700px]">
         <span>출판사 : </span>
         <span th:text="${product.publisher}" class="overflow-auto break-words"></span>
     </div>
