--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout/layout.html}" xmlns="http://www.w3.org/1999/html"
-      xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
+<html lang="ko" layout:decorate="~{layout/layout.html}" xmlns="http://www.w3.org/1999/html"
+      xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>main</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>BOOKU_LUV HOME</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" rel="stylesheet"
+          type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" rel="stylesheet"
+          type="text/css">
     <style>
         /* 호버 효과 제거 */
         .slick-arrow {
@@ -28,7 +33,6 @@
                font-size : 10px !important;
            }
        }
-
     </style>
 </head>
 <body layout:fragment="content">
@@ -38,7 +42,7 @@
         <div class="w-full mx-auto">
             <span class="font-bold text-2xl sm:text-4xl">신간도서</span>
         </div>
-        <div class="relative mt-8">
+        <div class="relative mt-5">
             <!-- 도서 목록 -->
             <div class="new-books-slider">
                 <!-- 각 도서 -->
@@ -54,10 +58,11 @@
                         <div class="mt-2">
                             <div>
                                 <span class="text-gray-500">정가 : </span>
-                                <span th:if="${newBook.priceSales != null && newBook.priceSales < newBook.priceStandard}"
-                                      class="line-through text-gray-500" th:text="${newBook.priceStandard} + '원'"></span>
-                                <span th:unless="${newBook.priceSales != null && newBook.priceSales < newBook.priceStandard}"
+                                <span class="line-through text-gray-500"
+                                      th:if="${newBook.priceSales != null && newBook.priceSales < newBook.priceStandard}"
                                       th:text="${newBook.priceStandard} + '원'"></span>
+                                <span th:text="${newBook.priceStandard} + '원'"
+                                      th:unless="${newBook.priceSales != null && newBook.priceSales < newBook.priceStandard}"></span>
                             </div>
                             <div th:if="${newBook.priceSales != null && newBook.priceSales < newBook.priceStandard}">
                                 <span class="text-gray-500">할인가 : </span>
@@ -78,32 +83,36 @@
         <div class="w-full mx-auto">
             <span class="font-bold text-2xl sm:text-4xl">베스트셀러</span>
         </div>
-        <!-- 도서 목록 -->
-        <div class="bestsellers-slider">
-            <!-- 각 도서 -->
-            <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 xl:w-1/5 p-4" th:each="bestseller : ${bestsellers.content}">
-                <div class="text-center">
-                    <a th:href="@{|/product/detail/${bestseller.id}|}">
-                        <img alt="Book Cover" class="mx-auto w-48 h-72" th:src="${bestseller.coverImg}">
-                    </a>
-                    <a class="block text-lg font-semibold my-[30px]" th:href="@{|/product/detail/${bestseller.id}|}"
-                       th:text="${bestseller.title}">Title</a>
-                    <span class="block text-gray-600 mb-[20px]" th:text="${bestseller.author}"></span>
-                    <span class="block text-gray-600 mb-[20px]" th:text="${bestseller.publisher}"></span>
-                    <div class="mt-2">
-                        <div>
-                            <span class="text-gray-500">정가 : </span>
-                            <span th:if="${bestseller.priceSales != null && bestseller.priceSales < bestseller.priceStandard}"
-                                  class="line-through text-gray-500" th:text="${bestseller.priceStandard} + '원'"></span>
-                            <span th:unless="${bestseller.priceSales != null && bestseller.priceSales < bestseller.priceStandard}"
-                                  th:text="${bestseller.priceStandard} + '원'"></span>
-                        </div>
-                        <div th:if="${bestseller.priceSales != null && bestseller.priceSales < bestseller.priceStandard}">
-                            <span class="text-gray-500">할인가 : </span>
-                            <span class="text-green-600" th:text="${bestseller.priceSales} + '원'"></span>
-                            <!-- 할인 정보를 표시할 조건을 체크하고 할인 정보를 표시합니다. -->
-                            <div th:text="'(' + ${100 - (bestseller.priceSales * 100) / bestseller.priceStandard + '%'} + ', '
+        <div class="relative mt-5">
+            <!-- 도서 목록 -->
+            <div class="bestsellers-slider">
+                <!-- 각 도서 -->
+                <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 xl:w-1/5 p-4"
+                     th:each="bestseller : ${bestsellers.content}">
+                    <div class="text-center">
+                        <a th:href="@{|/product/detail/${bestseller.id}|}">
+                            <img alt="Book Cover" class="mx-auto w-48 h-72" th:src="${bestseller.coverImg}">
+                        </a>
+                        <a class="block text-lg font-semibold my-[30px]" th:href="@{|/product/detail/${bestseller.id}|}"
+                           th:text="${bestseller.title}">Title</a>
+                        <span class="block text-gray-600 mb-[20px]" th:text="${bestseller.author}"></span>
+                        <span class="block text-gray-600 mb-[20px]" th:text="${bestseller.publisher}"></span>
+                        <div class="mt-2">
+                            <div>
+                                <span class="text-gray-500">정가 : </span>
+                                <span class="line-through text-gray-500"
+                                      th:if="${bestseller.priceSales != null && bestseller.priceSales < bestseller.priceStandard}"
+                                      th:text="${bestseller.priceStandard} + '원'"></span>
+                                <span th:text="${bestseller.priceStandard} + '원'"
+                                      th:unless="${bestseller.priceSales != null && bestseller.priceSales < bestseller.priceStandard}"></span>
+                            </div>
+                            <div th:if="${bestseller.priceSales != null && bestseller.priceSales < bestseller.priceStandard}">
+                                <span class="text-gray-500">할인가 : </span>
+                                <span class="text-green-600" th:text="${bestseller.priceSales} + '원'"></span>
+                                <!-- 할인 정보를 표시할 조건을 체크하고 할인 정보를 표시합니다. -->
+                                <div th:text="'(' + ${100 - (bestseller.priceSales * 100) / bestseller.priceStandard + '%'} + ', '
                                + ${bestseller.priceStandard - bestseller.priceSales} + '원 할인)'"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -113,7 +122,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" type="text/javascript"></script>
 <script>
 $(document).ready(function () {
 // 신간도서 슬라이더 설정
@@ -209,6 +218,7 @@ function adjustDotSize() {
    $('.slick-dots li button:before').css('font-size', dotSize);
 
 }
+
 </script>
 </body>
 </html>
